@@ -22,7 +22,7 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.
 ****************************************************************************/
-
+using System;
 namespace cocos2d
 {
     public class CCTransitionFlipY : CCTransitionSceneOriented
@@ -70,10 +70,15 @@ namespace cocos2d
             m_pOutScene.RunAction(outA);
         }
 
+        public CCTransitionFlipY(float t, CCScene s, tOrientation o)
+        {
+            InitWithDuration(t, s, o);
+        }
+
+        [Obsolete("Use the parameter ctor instead")]
         public new static CCTransitionFlipY Create(float t, CCScene s, tOrientation o)
         {
-            var pScene = new CCTransitionFlipY();
-            pScene.InitWithDuration(t, s, o);
+            var pScene = new CCTransitionFlipY(t, s, o);
             return pScene;
         }
     }
