@@ -8,9 +8,13 @@ namespace tests
 {
     public class FlipAngularLeftOver : CCTransitionFlipAngular
     {
+        public FlipAngularLeftOver(float t, CCScene s) : base(t, s, tOrientation.kOrientationLeftOver)
+        {
+        }
         public new static CCTransitionScene Create(float t, CCScene s)
         {
-            return CCTransitionFlipAngular.Create(t, s, tOrientation.kOrientationLeftOver);
+            return (new FlipAngularLeftOver(t, s));
+//            return CCTransitionFlipAngular.Create(t, s, tOrientation.kOrientationLeftOver);
         }
     }
 }
