@@ -8,9 +8,14 @@ namespace tests
 {
     public class FlipYDownOver : CCTransitionFlipY
     {
+        public FlipYDownOver(float t, CCScene s)
+            : base(t, s, tOrientation.kOrientationDownOver)
+        {
+        }
         public new static CCTransitionScene Create(float t, CCScene s)
         {
-            return CCTransitionFlipY.Create(t, s, tOrientation.kOrientationDownOver);
+            return (new FlipYDownOver(t, s));
+//            return CCTransitionFlipY.Create(t, s, tOrientation.kOrientationDownOver);
         }
     }
 }
